--- a/example/hello-world/index.html
+++ b/example/hello-world/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Hello world</title>
         <script src='../../otobox.js' type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href='../../otobox.css'>
     </head>
 
     <body>
