add "is in hint area?" function

--- a/example/hello-world/index.html
+++ b/example/hello-world/index.html
@@ -12,7 +12,7 @@
         var s1 = new otobox('#otobox');
         s1.addActivator({
             key: '@',
-            allowedChars: /[a-zA-Z0-9]/,
+            allowedChars: /[a-zA-Z0-9]+/,
             source: ['afshin', 'ali', 'ahmad']
         });
       </script>
