--- a/example/hello-world/index.html
+++ b/example/hello-world/index.html
@@ -11,6 +11,7 @@
       <script>
         var s1 = new otobox('#otobox');
         s1.addActivator({
+            name: 'mention.array',
             key: '@',
             allowedChars: /[a-zA-Z0-9]+/,
             source: ['afshin', 'ali', 'ahmad']
