--- a/example/hello-world/index.html
+++ b/example/hello-world/index.html
@@ -13,6 +13,7 @@
         s1.addActivator({
             name: 'mention.array',
             key: '@',
+            customChoice: true,
             allowedChars: /[a-zA-Z0-9]+/,
             source: ['afshin', 'ali', 'ahmad']
         });
