--- a/example/hello-world/index.html
+++ b/example/hello-world/index.html
@@ -14,6 +14,7 @@
             name: 'mention.array',
             key: '@',
             customChoice: true,
+            includeKey: true,
             allowedChars: /[a-zA-Z0-9]+/,
             source: ['afshin', 'ali', 'ahmad']
         });
