--- a/example/hello-world/index.html
+++ b/example/hello-world/index.html
@@ -3,10 +3,22 @@
         <title>Hello world</title>
         <script src='../../otobox.js' type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href='../../otobox.css'>
+        <link rel="stylesheet" type="text/css" href='../demo.css'>
     </head>
-
     <body>
-      <input type="text" name="otobox" id="otobox" placeholder='Start typing...'>
+        <div class='wrapper'>
+            <div class='intro'>
+                <h1>Hello World</h1>
+                <span>
+                  This example demonstrates the usage of otobox.js with an Array of items and an input.
+                </span>
+            </div>
+
+            <div class='example'>
+                <input type="text" name="otobox" id="otobox" placeholder='Start typing...'>
+            </div>
+        </div>
+
 
       <script>
         var s1 = new otobox('#otobox');
