add loading while calling fill choices function, change empty result status, fix xhrSource issues + change hello world exmaple styling

--- a/example/hello-world/index.html
+++ b/example/hello-world/index.html
@@ -15,7 +15,7 @@
             </div>
 
             <div class='example'>
-                <input type="text" name="otobox" id="otobox" placeholder='Start typing...'>
+                <input type="text" name="otobox" id="otobox" placeholder='Start typing...' class='otoboxInput'>
             </div>
         </div>
 
