add loading stylesheet + add loading element

--- a/example/hello-world/textarea.html
+++ b/example/hello-world/textarea.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-    <textarea type="text" name="otobox" id="otobox">Start typing...</textarea>
+    <textarea type="text" name="otobox" id="otobox" placeholder='Start typing...' class='otoboxTextarea'></textarea>
 
       <script>
         var s1 = new otobox('#otobox');
