--- a/example/hello-world/textarea.html
+++ b/example/hello-world/textarea.html
@@ -2,21 +2,33 @@
     <head>
         <title>Textarea</title>
         <script src='../../otobox.js' type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href='../demo.css'>
         <link rel="stylesheet" type="text/css" href='../../otobox.css'>
     </head>
 
     <body>
-    <textarea type="text" name="otobox" id="otobox" placeholder='Start typing...' class='otoboxTextarea'></textarea>
+        <div class='wrapper'>
+            <div class='intro'>
+                <h1>Textarea</h1>
+                <span>
+                  This example demonstrates the usage of otobox.js with an Array of items and a textarea.
+                </span>
+            </div>
 
-      <script>
-        var s1 = new otobox('#otobox');
-        s1.addActivator({
-            name: 'mention.array',
-            key: '@',
-            customChoice: true,
-            allowedChars: /[a-zA-Z0-9]+/,
-            source: ['afshin', 'ali', 'ahmad']
-        });
-      </script>
+            <div class='example'>
+                <textarea type="text" name="otobox" id="otobox" placeholder='Start typing...' class='otoboxTextarea' rows="5" cols="30"></textarea>
+            </div>
+        </div>
+
+        <script>
+            var s1 = new otobox('#otobox');
+            s1.addActivator({
+                name: 'mention.array',
+                key: '@',
+                customChoice: true,
+                allowedChars: /[a-zA-Z0-9]+/,
+                source: ['afshin', 'ali', 'ahmad']
+            });
+        </script>
     </body>
 </html>
