--- a/example/hello-world/index.html
+++ b/example/hello-world/index.html
@@ -15,7 +15,7 @@
             </div>
 
             <div class='example'>
-                <input type="text" name="otobox" id="otobox" placeholder='Start typing...' class='otoboxInput'>
+                <input type="text" name="otobox" id="otobox" placeholder='Start typing and use @ to mention...' class='otoboxInput'>
             </div>
         </div>
 
@@ -28,7 +28,7 @@
             customChoice: true,
             includeKey: true,
             allowedChars: /[a-zA-Z0-9]+/,
-            source: ['afshin', 'ali', 'ahmad']
+            source: ['afshin', 'john', 'guillermo', 'tj', 'bob', 'arman', 'arch']
         });
       </script>
     </body>
