--- a/example/hello-world/textarea.html
+++ b/example/hello-world/textarea.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class='example'>
-                <textarea type="text" name="otobox" id="otobox" placeholder='Start typing...' class='otoboxTextarea' rows="5" cols="30"></textarea>
+                <textarea type="text" name="otobox" id="otobox" placeholder='Start typing and use @ to mention...' class='otoboxTextarea' rows="5" cols="30"></textarea>
             </div>
         </div>
 
@@ -27,7 +27,7 @@
                 key: '@',
                 customChoice: true,
                 allowedChars: /[a-zA-Z0-9]+/,
-                source: ['afshin', 'ali', 'ahmad']
+                source: ['afshin', 'john', 'guillermo', 'tj', 'bob', 'arman', 'arch']
             });
         </script>
     </body>
